<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.filmsDetail.FilmsDetailFragment">

    <ImageView
        android:id="@+id/iv_banner"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@color/purple_700"/>

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@id/iv_banner"
        app:layout_constraintBottom_toBottomOf="@id/iv_banner"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="42dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_title_japan"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/iv_banner"
        android:orientation="vertical"
        android:layout_margin="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/iv_banner"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/author"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/iv_banner"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/producer"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/iv_banner"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/duration"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_blank"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/iv_banner"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/rotten_tomatoes"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/iv_rt_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_rt_fresh"/>

            <TextView
                android:id="@+id/tv_rt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotten_tomatoes_blank"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_blank"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>